# LogiCraft

LogiCraft/: CMakeLists.txt
LogiCraft/Code/Editor/: CMakeLists.txt  main.cpp
LogiCraft/Code/Editor/Core/: Editor.cpp  Editor.h  Panel.cpp  Panel.h
LogiCraft/Code/Engine/: CMakeLists.txt
LogiCraft/Code/Engine/Core/: AsyncLoadedObject.h  Engine.cpp  Engine.h  TaskManager.cpp  TaskManager.h
LogiCraft/Code/OLD_Code/: BrowserContent.cpp  BrowserContent.h  Folder.h  LogiCraft.vcxproj  LogiCraft.vcxproj.filters
